--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <script src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="slick.css" />
+    <link rel="stylesheet"　href="slick.css" />
 
 
     <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
@@ -147,15 +147,13 @@
         </div>
         <div id="Images">
             <h2>Images</h2>
-<!--
-            <ul class="slick">
-                <li><img alt="画像1" src="images/hero.jpg" /></li>
-                <li><img alt="画像2" src="images/background2.jpg" /></li>
-                <li><img alt="画像3" src="images/background3.jpg" /></li>
-                <li><img alt="画像4" src="images/background5.jpg" /></li>
-                <li><img alt="画像5" src="images/background5.jpg" /></li>
+            <ul class="slick-1">
+                <li><a href="#"><img alt="画像1" src="images/hero.jpg" /></a></li>
+                <li><a href="#"><img alt="画像2" src="images/background2.jpg" /></a></li>
+                <li><a href="#"><img alt="画像3" src="images/background3.jpg" /></a></li>
+                <li><a href="#"><img alt="画像4" src="images/background4.jpg" /></a></li>
+                <li><a href="#"><img alt="画像5" src="images/background5.jpg" /></a></li>
             </ul>
--->
         </div>
         <div id="Access">
             <h2>Access</h2>
