--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
         </div>
         <div id="Images">
             <h2>Images</h2>
-            <ul class="slick-1">
-                <li><a href="#"><img alt="画像1" src="images/hero.jpg" /></a></li>
-                <li><a href="#"><img alt="画像2" src="images/background2.jpg" /></a></li>
-                <li><a href="#"><img alt="画像3" src="images/background3.jpg" /></a></li>
-                <li><a href="#"><img alt="画像4" src="images/background4.jpg" /></a></li>
-                <li><a href="#"><img alt="画像5" src="images/background5.jpg" /></a></li>
-            </ul>
+            <div class="slick-1">
+                <div><a href="#"><img alt="画像1" src="images/hero.jpg" /></a></div>
+                <div><a href="#"><img alt="画像2" src="images/background2.jpg" /></a></div>
+                <div><a href="#"><img alt="画像3" src="images/background3.jpg" /></a></div>
+                <div><a href="#"><img alt="画像4" src="images/background4.jpg" /></a></div>
+                <div><a href="#"><img alt="画像5" src="images/background5.jpg" /></a></div>
+            </div>
         </div>
         <div id="Access">
             <h2>Access</h2>
