--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <script src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet"　href="slick.css" />
+    <link rel="stylesheet" 　href="slick.css" />
+      <link rel="stylesheet" 　href="slick-theme.css" />
 
 
     <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
@@ -148,11 +149,21 @@
         <div id="Images">
             <h2>Images</h2>
             <div class="slick-1">
-                <div><a href="#"><img alt="画像1" src="images/hero.jpg" /></a></div>
-                <div><a href="#"><img alt="画像2" src="images/background2.jpg" /></a></div>
-                <div><a href="#"><img alt="画像3" src="images/background3.jpg" /></a></div>
-                <div><a href="#"><img alt="画像4" src="images/background4.jpg" /></a></div>
-                <div><a href="#"><img alt="画像5" src="images/background5.jpg" /></a></div>
+                <div>
+                    <img alt="画像1" src="images/hero.jpg" />
+                </div>
+                <div>
+                    <img alt="画像2" src="images/background2.jpg" />
+                </div>
+                <div>
+                    <img alt="画像3" src="images/background3.jpg" />
+                </div>
+                <div>
+                    <img alt="画像4" src="images/background4.jpg" />
+                </div>
+                <div>
+                    <img alt="画像5" src="images/background5.jpg" />
+                </div>
             </div>
         </div>
         <div id="Access">
