--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <script src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" 　href="slick.css" />
-      <link rel="stylesheet" 　href="slick-theme.css" />
+<!--      <link rel="stylesheet" 　href="slick-theme.css" />-->
+      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
 
     <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Happy Hack</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/jquery.bgswitcher.js"></script>
+    <script async defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script async defer src="js/jquery.bgswitcher.js"></script>
     <script async defer src="js/particles.min.js"></script>
     <script async defer src="js/script.js"></script>
     <script async defer src="js/slick.min.js"></script>
