--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <script src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" 　href="slick.css" />
-<!--      <link rel="stylesheet" 　href="slick-theme.css" />-->
-      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <!--      <link rel="stylesheet" 　href="slick-theme.css" />-->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 
 
     <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Happy Hack</title>
     <script async defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script async defer src="js/jquery.bgswitcher.js"></script>
-    <script async defer src="js/particles.min.js"></script>
-    <script async defer src="js/script.js"></script>
-    <script async defer src="js/slick.min.js"></script>
-    <script async defer src="common.js"></script>
+    <script src="js/jquery.bgswitcher.js"></script>
+    <script src="js/particles.min.js"></script>
+    <script defer src="js/script.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script defer src="common.js"></script>
 
 </head>
 
@@ -149,23 +149,25 @@
         </div>
         <div id="Images">
             <h2>Images</h2>
-            <div class="slick-1">
-                <div>
+            <ul class="slick-1">
+                <button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button>
+                <li>
                     <img alt="画像1" src="images/hero.jpg" />
-                </div>
-                <div>
+                </li>
+                <li>
                     <img alt="画像2" src="images/background2.jpg" />
-                </div>
-                <div>
+                </li>
+                <li>
                     <img alt="画像3" src="images/background3.jpg" />
-                </div>
-                <div>
+                </li>
+                <li>
                     <img alt="画像4" src="images/background4.jpg" />
-                </div>
-                <div>
+                </li>
+                <li>
                     <img alt="画像5" src="images/background5.jpg" />
-                </div>
-            </div>
+                </li>
+                <button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button>
+            </ul>
         </div>
         <div id="Access">
             <h2>Access</h2>
