--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/jquery.bgswitcher.js"></script>
     <script src="js/particles.min.js"></script>
     <script defer src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script defer src="common.js"></script>
 
@@ -150,7 +151,7 @@
         <div id="Images">
             <h2>Images</h2>
             <ul class="slick-1">
-                <button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button>
+<!--                <button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button>-->
                 <li>
                     <img alt="画像1" src="images/hero.jpg" />
                 </li>
@@ -166,7 +167,7 @@
                 <li>
                     <img alt="画像5" src="images/background5.jpg" />
                 </li>
-                <button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button>
+<!--                <button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button>-->
             </ul>
         </div>
         <div id="Access">
