--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <script src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" 　href="slick/slick.css">
-    <link rel="stylesheet" 　href="slick/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+<!--    <link rel="stylesheet" 　href="slick/slick-theme.css">-->
+   
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+
     <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Happy Hack</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/jquery.bgswitcher.js"></script>
+    
     <script src="js/particles.min.js"></script>
     <script defer src="js/script.js"></script>
     <!--    <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>-->
 
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<!--    <script src="slick/slick.min.js"></script>-->
-<!--    <script defer src="slick/common.js"></script>-->
+<!--    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>-->
+    <!--    <script src="slick/slick.min.js"></script>-->
+    <!--    <script defer src="slick/common.js"></script>-->
 
 </head>
 
@@ -49,7 +52,7 @@
     </div>
     <div class="wrapper">
 
-        <div id="introduction">
+        <div id="introduction"  class="fuwat">
             <h2>Introduction</h2>
             <div class="intro-content">
                 <div class="ic1-img">
@@ -78,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <div id="particles-js">
+        <div id="particles-js" class="fuwat">
             <div id="courses">
                 <div class="coursess">
                     <h2>Courses</h2>
@@ -148,10 +151,11 @@
 
             </div>
         </div>
-        <div id="Images">
+        <div id="Images" class="fuwat">
             <h2>Images</h2>
-            <ul class="slider">
+            <div class="slider">
                 <!--                <button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button>-->
+<!--
                 <li>
                     <a href="#"><img alt="画像1" src="images/hero.jpg" /></a>
                 </li>
@@ -164,13 +168,20 @@
                 <li>
                     <a href="#"><img alt="画像4" src="images/background4.jpg" /></a>
                 </li>
-                <li>
+                <li> 
                     <a href="#"><img alt="画像5" src="images/background5.jpg" /></a>
                 </li>
+-->
                 <!--                <button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button>-->
-            </ul>
+                
+                <img alt="画像1" src="images/hero.jpg" />
+                <img alt="画像1" src="images/hero.jpg" />
+                <img alt="画像1" src="images/hero.jpg" />
+                <img alt="画像1" src="images/hero.jpg" />
+                <img alt="画像1" src="images/hero.jpg" />
+            </div>
         </div>
-        <div id="Access">
+        <div id="Access" class="fuwat" >
             <h2>Access</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3129539516003!2d135.49025455116305!3d34.69728569081216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6f359905ed7%3A0x9fec1659611f776f!2zTGlmZSBpcyBUZWNoISDlpKfpmKrjgqrjg5XjgqPjgrk!5e0!3m2!1sja!2sjp!4v1601062734473!5m2!1sja!2sjp" width="600" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
@@ -181,9 +192,9 @@
     </div>
 
     <script type="text/javascript" src="js/jquery.bgswitcher.js"></script>
-    <script defer type="text/javascript">
+    <script type="text/javascript">
         $(document).ready(function() {
-            $(".main-visuall").bgswitcher({
+            $(".main-visuall").bgSwitcher({
                 images: [
                     "images/hero.jpg",
                     "images/background2.jpg",
@@ -198,8 +209,55 @@
             });
         });
     </script>
-        <script src="slick/slick.min.js"></script>
-            <script defer src="slick/common.js"></script>
+<!--
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".slider").bgSwitcher({
+                images: [
+                    "images/hero.jpg", 
+                    "images/background2.jpg",
+                    "images/background3.jpg",
+                    "images/background4.jpg",
+                    "images/background5.jpg",
+                ],
+                effect: "fade",
+                easing: "swing",
+                interval: 6000,
+                loop: true
+            });
+        });
+    </script>  
+-->
+    <script src="slick/slick.min.js"></script>
+    <script>
+        $(".slider").slick({
+            autoplay:false,
+            dots: true,
+            slidesToShow: 4,
+            slidesToScroll: 1,
+            arrows:true
+        });
+    </script>
+<!--    <script defer src="slick/common.js"></script>-->
+<!--    <script src="js/jquery.bgswitcher.js"></script>-->
+<!--
+    <script>
+        jQuery(function($) {
+
+            $('.fuwat').css('visibility', 'hidden');
+            $(window).scroll(function() {
+                var windowHeight = $(window).height(),
+                    topWindow = $(window).scrollTop();
+                $('.fuwat').each(function() {
+                    var objectPosition = $(this).offset().top;
+                    if (topWindow > objectPosition - windowHeight + 200) {
+                        $(this).addClass("fuwatAnime");
+                    }
+                });
+            });
+        });
+    </script>
+-->
 </body>
 
 </html>
